force-app/main/default/objects/Account/fields/Perfil__c.field-meta.xml
<CustomField>
    <fullName>Perfil__c</fullName>
    <label>Perfil</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agressivo</fullName>
                <default>true</default>
                <label>Agressivo</label>
            </value>
            <value>
                <fullName>Conservador</fullName>
            </value>
            <value>
                <fullName>Moderado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>