force-app/main/default/objects/Account/fields/Perfil_Investidor__c.field-meta.xml
<CustomField>
    <fullName>Perfil_Investidor__c</fullName>
    <label>Perfil Investidor</label>
    <length>30</length>
    <type>Text</type>
</CustomField>