force-app/main/default/objects/Account/fields/Renda_Mensal__c.field-meta.xml
<CustomField>
    <fullName>Renda_Mensal__c</fullName>
    <label>Renda Mensal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>