force-app/main/default/objects/Account/fields/Soc_Security_Number__c.field-meta.xml
<CustomField>
    <fullName>Soc_Security_Number__c</fullName>
    <label>CPF</label>
    <length>14</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>