force-app/main/default/objects/Account/recordTypes/Investor.recordType-meta.xml
<RecordType>
    <fullName>Investor</fullName>
    <active>true</active>
    <label>Investor</label>
</RecordType>