force-app/main/default/objects/Account/validationRules/Validacao_CPF.validationRule-meta.xml
<ValidationRule>
    <fullName>Validacao_CPF</fullName>
    <active>true</active>
    <description>Valida formato de CPF</description>
    <errorConditionFormula>NOT(
OR(
ISBLANK(Soc_Security_Number__c),
REGEX( Soc_Security_Number__c , &quot;[0-9]{3}.[0-9]{3}.[0-9]{3}-[0-9]{2}&quot;)
)
)</errorConditionFormula>
    <errorMessage>O CPF deve ter o seguinte formato: 999.999.999-99.</errorMessage>
</ValidationRule>