force-app/main/default/objects/Account/listViews/Investor.listView-meta.xml
<ListView>
    <fullName>Investor</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Soc_Security_Number__c</columns>
    <columns>Data_Nascimento__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Sexo__c</columns>
    <columns>Total_Investment__c</columns>
    <filterScope>Mine</filterScope>
    <label>Investor</label>
</ListView>